<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/topBarSort"
        android:title="Sort by"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_sort_24"
        android:contentDescription="@string/content_description_filter" />

    <item
        android:id="@+id/topBarDeleteCancelledRequest"
        android:title="Delete cancelled requests"
        app:showAsAction="never"
        android:contentDescription="@string/content_description_remove_cancelled"
        android:icon="@drawable/ic_baseline_sort_24" />

    <item
        android:id="@+id/topBarDeleteOldRequests"
        android:title="Delete old requests"
        app:showAsAction="never"
        android:contentDescription="@string/content_description_remove_old"
        android:icon="@drawable/ic_baseline_sort_24" />

</menu>